[package]
name = "tagger"
version = "0.1.0"
edition = "2021"
#features = [ "derive" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
lnk = "0.3.0"
powershell_script = "0.2.1"
structopt = "0.1.3"
structopt-derive = "0.1.0"
